styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
@keyframes typing {
  from {
    width: 0ch;
  }
  to {
    width: 25ch;
  }
}
@keyframes blink {
  50% {
    border-color: transparent;
  }
}

@keyframes slideRight {
  0% {
    opacity: 0;
    transform: translateX(-100px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

nav {
  position: fixed;
  box-sizing: border-box;
  top: 0;
  left: 0;
  width: 100%;
  height: 60px;
  z-index: 1000;
}

.hover-underline {
  color: #ffffff;
  font-size: 1.5rem;
  display: inline-block;
  position: relative;
}
.hover-underline::after,
.hover-underline::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 4px;
  background: #b3819c;
  bottom: -5px;
  left: 0;
  transform: scaleX(0);
  transform-origin: right;
  transition: transform 0.4s ease-out;
}
.hover-underline::before {
  top: -5px;
  transform-origin: left;
}
.hover-underline:hover::after,
.hover-underline:hover::before {
  transform: scaleX(1);
}
#navbar ul {
  display: flex;
  justify-content: flex-end;
  gap: 20px;
  padding: 45px;
}
#navbar ul li {
  list-style: none;
  color: black;
  font-variant: small-caps;
  font-weight: bold;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
}
html,
body {
  height: 100%;
  background-size: cover;
}
main {
  padding: 0 1rem;
}

#heading {
  position: relative;
  margin: 10px auto;
  text-align: center;
  padding: 0;
  animation: slideRight 3s ease-out forwards;
}

#heading::before,
#heading::after {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  width: 200px;
  height: 2px; /* Line thickness */
  background: #b3819c;
}
#heading::before {
  width: 400px;
  top: -2px;
}

#heading::after {
  width: 400px;
  bottom: -2px;
}

.intro {
  margin: 80px;
  width: 600px;
  height: 350px;
  border-radius: 40px;
  text-align: center;
  padding: 50px;
  font-size: 1.3rem;
  line-height: 1.8;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
}

section {
  width: 100%;
  min-height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 50px 20px;
  border-radius: 15px; /* Optional: adds rounded corners */
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); /* Adds a soft shadow */
}
p {
  box-sizing: border-box;
  border-radius: 5px;
  margin-bottom: 1rem;
}

.project-tile {
  padding: 10px 15px;
  font-size: 1.2rem;
  font-weight: bold;
  text-decoration: none;
  border-radius: 10px;
  transition: all 0.3s ease-in-out;
}

button {
  box-sizing: border-box;
  padding: 10px;
  font-size: 1.2rem;
  font-weight: bold;
  text-decoration: none;
  border-radius: 10px;
  transition: all 0.3s ease-in-out;
}
.project-card {
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 12px;

  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  padding: 30px;

  background-color: rgba(243, 198, 216, 0.95);
  border-radius: 12px;

  box-shadow: 0px 12px 35px rgba(0, 0, 0, 0.2);
  backdrop-filter: blur(4px);

  text-align: center;
}
.project-card h3 {
  font-size: 1.6rem;
  font-weight: 700;
  letter-spacing: 1px;
  margin-bottom: 5px;
}
@media (max-width: 750px) {
  h1 {
    font-size: 2rem;
  }
}

